# Lavanderia

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
init/: 01.sql
src/: main.rs
src/db/entidades/: clientes.rs  mod.rs  pedidos.rs  prelude.rs  servicios.rs
