[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poem = "2.0.1"
poem-openapi = { version ="4.0.1", features = ["swagger-ui", "chrono", "rust_decimal"] }
sea-orm = { version = "0.12.15", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-json", "with-chrono", "rust_decimal"] }
serde = { version = "1.0.197", features = ["default"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
